fixing overflow in global

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -40,6 +40,10 @@ body {
   margin: 0;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+
+}
+
+#___gatsby {
   overflow-x: hidden;
 }
 
